compiler/src/test/resources/amyc/parser/failing/FunDefError3.amy
object FunDef
  fn foo(i): Int = { 42 }
end FunDef
